cmake_minimum_required(VERSION 3.0)
project(testmode)
if(${CMAKE_VERSION} VERSION_LESS "3.1")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
else()
    set(CMAKE_CXX_STANDARD 11)
endif()
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
option(WITH_DEMO "Compile with demo features enabled" OFF)
add_subdirectory(src)
if(WITH_DEMO)
    add_definitions(-DDEMO=1)
    add_subdirectory(demo)
endif()
add_subdirectory(doc)
enable_testing()
add_subdirectory(test)
INCLUDE(InstallRequiredSystemLibraries)
set(CPACK_SOURCE_IGNORE_FILES "build/*;*.swp")
include (CPack)
