cmake_minimum_required(VERSION 3.0)
set(EXECUTABLE_NAME "demo")
find_package(Festival REQUIRED)
find_package(Threads)
find_package(Asio REQUIRED)
add_definitions(-DASIO_STANDALONE)
include_directories(${ASIO_INCLUDE_DIR})
include_directories(${SPEECH_TOOLS_INCLUDE_DIR})
include_directories(${FESTIVAL_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_executable(${EXECUTABLE_NAME} demo.cpp)
add_executable(demotest demotest.cpp)
target_link_libraries(demo ${CMAKE_THREAD_LIBS_INIT} ${SPEECH_TOOLS_LIBRARY} ${FESTIVAL_LIBRARY}) 
target_link_libraries(demotest ${CMAKE_THREAD_LIBS_INIT}) 
install(TARGETS demo DESTINATION bin)
