cmake_minimum_required(VERSION 3.0)
set(EXECUTABLE_NAME "messagetest")
include_directories( ${CMAKE_HOME_DIRECTORY}/src )
find_package(Threads)
add_executable(${EXECUTABLE_NAME} main.cpp)
add_test(MessageTest ${EXECUTABLE_NAME})
add_test(ConsoleTest ${EXECUTABLE_NAME})
target_link_libraries(${EXECUTABLE_NAME} Message Console cppunit ${CMAKE_THREAD_LIBS_INIT})
