cmake_minimum_required(VERSION 3.0)
include_directories( ${CMAKE_HOME_DIRECTORY}/src )
find_package(Threads)
add_executable(MessageTest MessageTest.cpp)
add_test(MessageTest MessageTest)
add_executable(ConsoleTest ConsoleTest)
add_test(ConsoleTest ConsoleTest)
add_executable(SerialTest SerialTest.cpp)
add_test(SerialTest SerialTest)
target_link_libraries(MessageTest Message Console cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ConsoleTest Message Console cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SerialTest Message SerialDevice cppunit ${CMAKE_THREAD_LIBS_INIT})
