cmake_minimum_required(VERSION 3.0)
include_directories( ${CMAKE_HOME_DIRECTORY}/src )
find_package(Threads)
add_executable(MessageTest MessageTest.cpp)
add_test(MessageTest MessageTest)
add_executable(ConsoleTest ConsoleTest)
add_test(ConsoleTest ConsoleTest)
add_executable(SerialTest SerialTest.cpp)
add_test(SerialTest SerialTest)
add_executable(pcapngTest pcapngTest.cpp)
add_test(pcapngTest pcapngTest)
add_executable(CaptureTest CaptureTest.cpp)
add_test(CaptureTest CaptureTest)
add_executable(RouterTest RouterTest.cpp)
add_test(RouterTest RouterTest)
add_executable(SinkDeviceTest SinkDeviceTest.cpp ../src/SinkDevice.cpp)
add_test(SinkDeviceTest SinkDeviceTest)

target_link_libraries(MessageTest Message Console cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ConsoleTest Message Console cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SerialTest Message SerialDevice cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(pcapngTest Message CaptureDevice cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(CaptureTest Message CaptureDevice cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(RouterTest Message Router cppunit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SinkDeviceTest Message cppunit ${CMAKE_THREAD_LIBS_INIT})
